@@ -146,7 +146,31 @@ if ($user->authorise('core.manage', 'com_menus'))
 	// Menu Types
 	foreach (ModMenuHelper::getMenus() as $menuType)
 	{
-		$titleicon = $menuType->home ? ' <span>'.JHtml::_('image','menu/icon-16-default.png', NULL, NULL, true).'</span>' : '';
+		$alt = '*' .$menuType->sef. '*';
+		if ($menuType->home == 0)
+		{
+			$titleicon = '';
+		}
+		elseif ($menuType->home == 1 && $menuType->language == '*')
+		{
+			$titleicon = ' <span>'.JHtml::_('image','menu/icon-16-default.png', '*', array('title' => JText::_('MOD_MENU_HOME_DEFAULT')), true).'</span>';
+		}
+		elseif ($menuType->home > 1)
+		{
+			$titleicon = ' <span>'.JHtml::_('image','menu/icon-16-language.png', $menuType->home, array('title' => JText::_('MOD_MENU_HOME_MULTIPLE')), true).'</span>';
+		}
+		else
+		{
+			$image = JHtml::_('image','mod_languages/'.$menuType->image.'.gif', NULL, NULL, true, true);
+			if (!$image)
+			{
+				$titleicon = ' <span>'.JHtml::_('image','menu/icon-16-language.png', $alt, array('title' => $menuType->title_native), true).'</span>';
+			}
+			else
+			{
+				$titleicon = ' <span>'.JHtml::_('image', 'mod_languages/'.$menuType->image.'.gif', $alt, array('title'=>$menuType->title_native), true).'</span>';
+			}
+		}
 		$menu->addChild(
 		new JMenuNode($menuType->title,	'index.php?option=com_menus&view=items&menutype='.$menuType->menutype, 'class:menu', null, null, $titleicon), $createMenu
 				);
