@@ -2314,8 +2314,6 @@ a.jgrid:hover {	text-decoration: none;}
 }
 
 a.icon-16-menu span img {
-	height: 16px;
-	width: 16px;
 	vertical-align: bottom;
 }
 
