@@ -5,7 +5,7 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 MOD_BREADCRUMBS="Breadcrumbs"
-MOD_BREADCRUMBS_FIELD_HOMETEXT_DESC="This text will be shown as Home entry"
+MOD_BREADCRUMBS_FIELD_HOMETEXT_DESC="This text will be shown as Home entry. If the field is left empty, it will use the default value from the mod_breadcrumbs.ini language file."
 MOD_BREADCRUMBS_FIELD_HOMETEXT_LABEL="Text for Home Entry"
 MOD_BREADCRUMBS_FIELD_SEPARATOR_DESC="A text separator"
 MOD_BREADCRUMBS_FIELD_SEPARATOR_LABEL="Text Separator"
