@@ -302,16 +302,18 @@ class plgSystemLanguageFilter extends JPlugin
 		$app = JFactory::getApplication();
 		if ($app->isSite())
 		{
-			$lang_code = $user['language'];
-			if (empty($lang_code)) {
-				$lang_code = self::$default_lang;
+			if ($this->params->get('automatic_change', 1)) {
+				$lang_code = $user['language'];
+				if (empty($lang_code)) {
+					$lang_code = self::$default_lang;
+				}
+				self::$tag = $lang_code;
+				// Create a cookie
+				$conf = JFactory::getConfig();
+				$cookie_domain 	= $conf->get('config.cookie_domain', '');
+				$cookie_path 	= $conf->get('config.cookie_path', '/');
+				setcookie(JUtility::getHash('language'), $lang_code, time() + 365 * 86400, $cookie_path, $cookie_domain);
 			}
-			self::$tag = $lang_code;
-			// Create a cookie
-			$conf = JFactory::getConfig();
-			$cookie_domain 	= $conf->get('config.cookie_domain', '');
-			$cookie_path 	= $conf->get('config.cookie_path', '/');
-			setcookie(JUtility::getHash('language'), $lang_code, time() + 365 * 86400, $cookie_path, $cookie_domain);
 		}
 	}
 }
