@@ -1,0 +1,22 @@
+/**
+ * @version		$Id: error.css 20475 2011-01-28 15:47:14Z chdemko $
+ * @copyright	Copyright (C) 2005 - 2011 Open Source Matters, Inc. All rights reserved.
+ * @license		GNU General Public License version 2 or later; see LICENSE.txt
+ */
+
+/* Start Common Styles */
+
+body {
+	text-align: right;
+}
+
+.TD{
+	text-align: left;
+}
+
+#errorboxbody {
+	text-align: right;
+}
+#techinfo {
+	text-align: right;
+}
