@@ -47,6 +47,8 @@ MOD_MENU_HELP_SECURITY="Security Center"
 MOD_MENU_HELP_SHOP="Joomla Shop"
 MOD_MENU_HELP_SUPPORT_FORUM="Support Forum"
 MOD_MENU_HELP_TRANSLATIONS="Joomla Translations"
+MOD_MENU_HOME_DEFAULT="Home"
+MOD_MENU_HOME_MULTIPLE="Warning! Multiple homes!"
 MOD_MENU_LOGOUT="Logout"
 MOD_MENU_MASS_MAIL_USERS="Mass Mail Users"
 MOD_MENU_MEDIA_MANAGER="Media Manager"
