@@ -27,6 +27,16 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+10-May-2011 Jean-Marie Simonet
+ #$ [#25845] *Breadcrumbs never use the language string for Home
+ #$ [#25837] *Admin menu does not differentiate between default Home set to "All" and those set to a Content Language. Thanks Christophe.
+
+09-May-2011 Jean-Marie Simonet
+ [#25830] *404 - page not found - error.php - for template beez_20 - not working properly
+ 
+05-May-2011 Jean-Marie Simonet
+ # [#25820] *Automatic site content language change at login parameter not implemented in languagefilter.
+
 03-May-2011 Jean-Marie Simonet
  # [#25796] *Editing template files is impossible if Codemirror and editor None are disabled
  # [#25795] *Normalizing language load in profile plugin
